--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
-    "knex": "^2.4.2"
+    "knex": "^2.4.2",
+    "zod": "^3.20.2"
   }
 }
