--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.14.0",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.34.0",
     "sqlite3": "^5.1.4",
+    "supertest": "^6.3.3",
     "tsx": "^3.11.0",
     "typescript": "^4.9.4",
     "vitest": "^0.28.5"
